--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>MyPage</title>
 </head>
 <body>
-    <div class="topic"><p>Tutaj znajduję się tekst o stronie</p></div>
+    <div class="topic">
+        <h1>Witaj na mojej stronie</h1>
+        <p>Tutaj znajduję się tekst o stronie</p>
+    </div>
 </body>
 </html>
