--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <div class="topic">
-        <h1>Witaj na mojej stronie</h1>
-        <p>Tutaj znajduję się tekst o stronie</p>
+        <h1>Witaj na mojej stronie ShoperUP</h1>
+        <p>Tutaj znajduję się tekst o stronie którą tworzę</p>
+        <h2>Podsekcja 1</h2>
+        <p>opis podsekcji którą stworzyłem</p>
+        <h3>Podtemat Podsekcji 1</h3>
+        <p>Dalsze szczegóły dotyczące podtematu...</p>
+
+        <h2>Podsekcja 2</h2>
+        <p>opis podsekcji którą stworzyłem</p>
+        <h3>Podtemat Podsekcji 2</h3>
+        <p>Dalsze szczegóły dotyczące podtematu...</p>
     </div>
 </body>
 </html>
